--- a/AAA._Python._Decorators.ipynb
+++ b/AAA._Python._Decorators.ipynb
@@ -204,8 +204,7 @@
     "    def decorated(some_str):\n",
     "        def my_write(some_str):\n",
     "            if some_str != '\\n':\n",
-    "                current_datetime = datetime.now()\n",
-    "                current_datetime_string = current_datetime.strftime(\"[%Y-%m-%d %H:%M:%S]: \")\n",
+    "                current_datetime_string = datetime.now().strftime(\"[%Y-%m-%d %H:%M:%S]: \")\n",
     "                return original_write(f'{current_datetime_string}{some_str}')\n",
     "            else:\n",
     "                sys.stdout.write = original_write\n",
@@ -283,13 +282,12 @@
     "def redirect_output(filepath):\n",
     "    original_out = sys.stdout\n",
     "    def decorator(function):\n",
-    "        def decorated():\n",
-    "            output = open(filepath, 'w')\n",
-    "            sys.stdout = output\n",
-    "            fun = function()\n",
-    "            sys.stdout = original_out\n",
-    "            output.close()\n",
-    "            return fun\n",
+    "        def decorated(*args, **kwargs):\n",
+    "            with open(filepath, 'w') as output:\n",
+    "                sys.stdout = output\n",
+    "                fun = function(*args, **kwargs)\n",
+    "                sys.stdout = original_out\n",
+    "                return fun\n",
     "        return decorated\n",
     "    return decorator\n",
     "\n",
